--- a/personal_site_attempt/gambler.html
+++ b/personal_site_attempt/gambler.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gambler story</title>
+    <title>Gamblers Greed</title>
     <link rel="stylesheet" href="gambler.css">
+    <script defer src="gambler.js"></script>
 </head>
 <body>
-    <div>
-        <h1>Gamblers Greed</h1>
+    <h1>Gamblers Greed</h1>
+    <div id="imgDiv">
+        <img id="page1" src="gamblingPage1.jpg">
+        <img id="page2" src="gamblingPage2.jpg">
+        <img id="page3" src="gamblingPage3.jpg">
+        <img id="page4" src="gamblingPage4.jpg">
+        <img id="page5" src="gamblingPage5.jpg">
     </div>
+    <div id="buttonDiv">
+        <button id="previous">Go Back</button>
+        <button id="next">Next</button>
+    </div>
+
 </body>
 </html>
